# halite-bot

./: .gitignore  helpers.py  main.ipynb  main.py  pyproject.toml  random_agent.py  shell.nix  submission.py
