[tool.poetry]
name = "halite"
version = "0.1.0"
description = ""
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
kaggle-environments = "^1.9.9"
requests = "^2.27.1"
numpy = "^1.22.3"
ipython = "^8.3.0"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
